--- a/public/main.css
+++ b/public/main.css
@@ -3,5 +3,34 @@ a {
     color: rgb(209, 209, 209);
     margin: 0;
     padding: 0;
-    background-color: black;
+    background-color: rgb(40, 44, 52);
+    text-decoration: none;
+    list-style: none;
+}
+
+a:hover {
+    font-weight: bold;
+}
+
+nav {
+    width: 100%;
+    height: 80px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 5%;
+}
+
+nav>ul {
+    width: 50%;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+main {
+    padding: 0 5%;
+
+    >h2 {
+        font-size: 1.2rem;
+    }
 }
